style: 순서, 함수명 등 수정